need to solve GraphSource reading

--- a/src/main/resources/params_default.ini
+++ b/src/main/resources/params_default.ini
@@ -4,10 +4,13 @@ generator.defaultSeed: 23
 generator.outputDir:out
 generator.startYear:2020
 generator.numYears:3
-generator.deleteDelta:10000
+generator.activityDelta:3600000
+generator.deleteDelta:36000000
 generator.numUpdateStreams:1
 
 account.blockedAccountRatio:0.05
+
+medium.blockedMediumRatio:0.05
 
 own.maxAccounts:5
 
@@ -21,10 +24,12 @@ transfer.baseProbCorrelated:0.988
 transfer.limitProCorrelated:0.2
 
 signIn.accountSignedInFraction:1.0
+signIn.maxAccountToSignIn:3
 signIn.maxMultiplicity:10
 
 guarantee.personGuaranteeFraction:0.6
 guarantee.companyGuaranteeFraction:0.6
+guarantee.maxTargetsToGuarantee:3
 
 loan.personLoanFraction:0.6
 loan.companyLoanFraction:0.6
